# NeoNemesis

./: .gitignore  00_READ_ME_FIRST.txt  BLOOM_CODE_QUALITY.txt  BLOOM_COMPLETION_SUMMARY.txt  BLOOM_FINAL_VALIDATION.txt  BLOOM_FUTURE_IDEAS.txt  BLOOM_OPTIMIZATION_REPORT.txt  BLOOM_PROJECT_COMPLETE.txt  BuildProject.bat  CMakeLists.txt  LICENSE  build-Loader.bat  build-full.bat  build-internals.bat  build-loader.bat  build.bat  custom_model_animation_report.txt  et --hard faa804fb  ida scan.txt
Dependencies/ensia-main/: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICS.md  LEGAL.md  README.md  SECURITY.md  SPONSOR.md  ensia.toml.example
Dependencies/ensia-main/.github/: dependabot.yml
Dependencies/ensia-main/.github/workflows/: deploy.yml
Dependencies/ensia-main/obfuscation/: AntiClassDump.cpp  AntiDebugging.cpp  BogusControlFlow.cpp  CryptoUtils.cpp  Flattening.cpp  FunctionWrapper.cpp  ObfConfig.cpp  Obfuscation.cpp  SplitBasicBlocks.cpp  StringEncryption.cpp  VectorObfuscation.cpp
Dependencies/ensia-main/obfuscation/include/: AntiClassDump.h  AntiHook.h  BogusControlFlow.h  ChaosStateMachine.h  ConstantEncryption.h  CryptoUtils.h  FunctionCallObfuscate.h  FunctionWrapper.h  MBAObfuscation.h  StringEncryption.h  VectorObfuscation.h
Dependencies/ensia-main/test/: obf_test_lite.cpp
Dependencies/ensia-main/test/configs/: lite.toml  rust.toml
Dependencies/ensia-main/web/: Cargo.toml  index.html  style.css
Dependencies/ensia-main/web/public/: 404.html
Dependencies/ensia-main/web/src/: app.rs  theme.rs
Loader/: CMakeLists.txt  LoaderResources.h  imgui_extensions.cpp  imgui_extensions.h  layout_utils.cpp  layout_utils.h  loader_assets.rc  main.cpp  monitor.cpp  process_helper.cpp  process_helper.h  product.cpp  product_registry.cpp  product_registry.h  system_info.cpp  system_info.h
Loader/api/: json.h  loader_api.cpp  loader_api.h
Loader/injector/: hijacking.h  infector.cpp  infector.h  injector.cpp
Loader/steam/: avatar_loader.cpp  avatar_loader.h  steam_helper.cpp  steam_helper.h  steamacc.cpp  steamacc.h
Loader/subscription/: product.cpp  product.h  remote_profile.cpp  remote_profile.h
Loader/ui/: blur.cpp  blur.h  imgui_extensions.h  layout_utils.cpp  product_view.cpp  product_view.h
NemesisClient/: CMakeLists.txt  PacketGuard.hpp  RenderHook.cpp  dllmain.cpp  resource_loader.cpp
NemesisClient/Functions/: AimConfig.h
NemesisClient/Functions/L Functions/EnemyChams/: EnemyChams.cpp  EnemyChams.hpp
NemesisClient/Functions/L Functions/Esp/: Esp.cpp
NemesisClient/Functions/L Functions/LegitBot/: LegitBot.cpp  LegitBot.hpp
NemesisClient/Functions/L Functions/WallHackV2/: WallHackV2.hpp  WallHackV2Config.hpp
NemesisClient/Functions/R Functions/JumpSystem/: JumpSystem.hpp
NemesisClient/ImGuiUI/: imgui_extensions.h  layout_utils.h  nemesis_ui.h
NemesisClient/Misc/: LogsSystem.hpp  SvCheats.cpp  SvCheats.hpp
NemesisClient/RequiredDependencies/ensia-main/: .gitignore  CNAME
NemesisClient/RequiredDependencies/kiero2-master/: .gitignore
NemesisDLC/: CMakeLists.txt  InventoryGive_v1.txt  dllmain.cpp  resource_loader.cpp  resource_loader.h  resources.aps  resources.h  resources.rc
NemesisDLC/AllUsedAddresses/Address/: AllUsedAddresses.hpp
NemesisDLC/CUSTOM RENDER/CustomModel/: CustomModel.cpp  CustomModel.hpp
NemesisDLC/ConfigSavingSystem/: AdminConsole.cpp  AdminConsole.hpp  FriendModels.cpp  FriendModels.hpp
NemesisDLC/CustomWorldRender/Night/: Night.cpp  Night.hpp
NemesisDLC/ImGuiUI/: imgui_extensions.cpp  imgui_extensions.h  layout_utils.cpp  layout_utils.h  nemesis_ui.cpp  nemesis_ui.h
NemesisDLC/InactiveFileStorage/testicon/: TestIcon.cpp  TestIcon.hpp
NemesisDLC/Miscellaneous Functions/: AimConfig.cpp  AimConfig.h
NemesisDLC/Miscellaneous Utilities/LogsSystem/: LogsSystem.cpp
NemesisDLC/Miscellaneous Utilities/Visibility Check System/: Visibility.cpp  Visibility.hpp
NemesisDLC/Miscellaneous Utilities/sc_cheat/: SvCheats.cpp  Новый текстовый документ.txt
NemesisDLC/RenderDrx11/: RenderHook.cpp  RenderHook.hpp  UsedHook.hpp
NemesisDLC/RequiredDependencies/: SKILL.md
NemesisDLC/RequiredDependencies/HImGuiAnimation-main/: HImGuiAnimation.cpp  HImGuiAnimation.h
NemesisDLC/RequiredDependencies/IconFontCppHeaders-main/: IconsCodicons.cs  IconsCodicons.go  IconsCodicons.h  IconsCodicons.py  IconsCodicons.rs  IconsLucide.cs  IconsLucide.go  IconsLucide.h  IconsLucide.py  IconsLucide.rs  IconsMaterialSymbols.cs  IconsMaterialSymbols.go  IconsMaterialSymbols.h  IconsMaterialSymbols.py  IconsMaterialSymbols.rs
NemesisDLC/RequiredDependencies/PolyHook_2_0-master/: README.md
NemesisDLC/RequiredDependencies/capstone-next/: CONTRIBUTING.md  ChangeLog  pkgconfig.mk
NemesisDLC/RequiredDependencies/ensia-main/: CITATION.cff
NemesisDLC/RequiredDependencies/implot-master/: implot_demo.cpp
NemesisDLC/RequiredDependencies/kiero2-master/: CMakeLists.txt
NemesisDLC/RequiredDependencies/omni-main/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
NemesisDLC/Resources/: embed_resources.cmake  embedded_resources.h
NemesisDLC/Server Packet Anomaly Guard/Search for Anomalies in Packages/: PacketGuard.cpp  PacketGuard.hpp
NemesisDLC/System API Rendering/SystemShaderBloom/: API_Documentation.hpp  BloomColor.hpp  BloomShaders.hpp  BloomUsageExample.hpp  README.md  SystemShaderBloom.hpp  SystemShaderBloomImpl.cpp
NemesisLoader/: CMakeLists.txt  file_utils.cpp  file_utils.h  imgui_extensions.h  main.cpp  system_info.cpp
NemesisLoader/SecondaryDll/: CMakeLists.txt  dllmain.cpp
NemesisLoader/TestDll/: CMakeLists.txt  dllmain.cpp
NemesisLoader/injector/: infector.h
NemesisLoader/neo/: LoaderApp.cpp  LoaderApp.hpp  LoaderUI.cpp  LoaderUI.hpp
NemesisLoader/src/: dllmain.cpp
NemesisLoader/src/audio/: KillSound.cpp  KillSound.hpp  resource.h  resources.rc
NemesisLoader/src/config/: Config.cpp  Config.hpp
NemesisLoader/src/hook/: SoundHook.cpp  SoundHook.hpp
NemesisLoader/src/kill/: KillWatcher.cpp  KillWatcher.hpp
NemesisLoader/subscription/: product.cpp
(+439 files in other folders)
